--- a/serverless.yml
+++ b/serverless.yml
@@ -7,6 +7,8 @@ custom:
 provider:
   name: aws
   runtime: nodejs14.x
+  region: us-east-1
+  profile: serverless-admin
   iam:
     role:
       statements:
