--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "dependencies": {
-    "express": "^4.17.1",
-    "serverless-http": "^2.7.0"
+    "uuid": "^8.3.2"
   }
 }
