Add DeleteTodo endpoint

--- a/serverless.yml
+++ b/serverless.yml
@@ -47,6 +47,13 @@ functions:
           path: todos/{id}
           method: get
           cors: true
+  delete:
+    handler: handler/deleteTodo.deleteTodo
+    events:
+      - http:
+          path: todos/{id}
+          method: delete
+          cors: true
 
 resources:
   Resources:
